--- a/css/styles.css
+++ b/css/styles.css
@@ -3412,7 +3412,12 @@ td:last-child {
     margin-top    : 0;
     margin-bottom : var(--vspace-1_25);
 }
+.prenom{
 
+color: black;
+text-decoration-line: underline;
+text-decoration-color: #ff3705
+}
 .s-intro__content-title2 {
     font-size     : clamp(2.8rem, 3.8vw, 6.8rem);
     line-height   : 1.045;
@@ -3967,7 +3972,7 @@ td:last-child {
  * ------------------------------------------------------------------- */
 .folio-entries .entry {
     flex    : none;
-    width   : 50%;
+    width   : 28%;
     margin  : 0;
     padding : 0;
     overflow: hidden;
